# sql-nameguard

./: README.md  pyproject.toml  requirements.txt  test-llm-suggest.ipynb  test-sql-complexity-gemini.ipynb  test-sql-complexity.ipynb  test-sql-nameguard-in-framework.ipynb  test-sql-nameguard-new-class.ipynb  test-sql-nameguard.ipynb
src/sql_nameguard/: SSCScalculator.py  analyze.py  embed_sql.py  lint.py  llm_call.py  llm_request.py  llm_suggest.py  parse_json.py  parse_sql.py
